--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 }
 
 body {
-    
     display: flex;
     background-color: bisque;
 }
@@ -52,13 +51,14 @@ button:hover{
     height: 84%;
     width: 50%;
     margin: auto;
-    display: block;
+    display: flex;
     flex-wrap: wrap;
     position: fixed;
     border: 4px solid rgb(53, 14, 14);
     margin: 7% 25%;
-    padding: 5px 0px 0px 5px;
+    padding: 5px ;
     background-color: burlywood;
+    perspective: 1000px;
 }
 
 .card {
@@ -105,4 +105,36 @@ button:hover{
 
 .card.flip {
     transform: rotateY(180deg);
+}
+
+@media only screen and (max-width: 600px) {
+
+    button{
+        width: 300px;
+        height: 30px;
+        
+    }
+    .nav{
+        margin: 5% auto;
+    }
+    .memory-game{
+        margin: 20% 5%;
+        width: 90%;
+        height: 75%;
+    }
+    #font{
+       font-size: 11px;
+       padding: 50% 0px 0px 0px;
+    }
+    button{
+        margin: 450px 0px 0px 0px;
+        border-radius: 10px;
+        border: none;
+        animation: blinker 3s linear infinite;
+    }
+    @keyframes blinker {  
+    75% { opacity: 0.90; }
+    50% { opacity: 0.60; }
+    25% { opacity: 0.30; }
+    }
 }
