--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ button:hover{
     transform: rotateY(180deg);
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 100%) {
 
     button{
         width: 300px;
