--- a/style.css
+++ b/style.css
@@ -107,30 +107,34 @@ button:hover{
     transform: rotateY(180deg);
 }
 
-@media only screen and (max-width: 100%) {
+@media only screen and (max-width: 768px) {
 
+    .principal{
+        width: 70%;
+        font-size: 100%;
+    }
     button{
-        width: 300px;
-        height: 30px;
+        width: 75%;
+        height: 5%;
         
     }
     .nav{
         margin: 5% auto;
     }
     .memory-game{
-        margin: 20% 5%;
+        margin: 30% 5%;
         width: 90%;
         height: 75%;
     }
     #font{
-       font-size: 11px;
+       font-size: 50%;
        padding: 50% 0px 0px 0px;
     }
     button{
-        margin: 450px 0px 0px 0px;
-        border-radius: 10px;
-        border: none;
+        margin-top: 10%;
         animation: blinker 3s linear infinite;
+        font-size: 80%;
+        width: 100%;
     }
     @keyframes blinker {  
     75% { opacity: 0.90; }
